# CryptoDataCPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  debug_build.bat  save.vcpkg.json  vcpkg.json
.github/workflows/: windows.ci.yml
cmake/templates/: CryptoDataConfig.cmake.in
cpp/: Build.md  CMakeLists.txt  Feeds.md  vcpkg.json
cpp/include/cryptodata/: core.h
cpp/src/feed/exchange/FTX/example/: CMakeLists.txt  RestTest.cpp  rest_test.cpp  ws_test.cc  ws_test.cpp
cpp/src/feed/exchange/FTX/rest/: CMakeLists.txt  client.cpp  client.h
cpp/src/feed/exchange/FTX/util/: CMakeLists.txt  Encoding.cpp  Encoding.h  HTTP.cc  HTTP.cpp  Secret.cpp  Secret.h  WS.cpp  WS.h
cpp/src/feed/exchange/FTX/ws/: CMakeLists.txt  client.cc  client.h
cpp/src/marketdata/historical/: CMakeLists.txt  HistMarketData.cpp  HistMarketData.h
cpp/src/marketdata/streaming/: CMakeLists.txt  StreamingMarketData.cpp  StreamingMarketData.h
cpp/src/staticdata/securities/: CMakeLists.txt  securities.cpp  securities.h
cpp/src/test/: CMakeLists.txt  main.cpp
cpp/src/test/marketdata/: testHistoricalMarketData.cpp  testStreamingMarketData.cpp
cpp/src/test/staticdata/: testsecurities.cpp
docs/: Build.md
